<resources>
    <string name="app_name">ATM</string>

    <string name="inset_card">Вставити карту</string>
    <string name="not_ready_to_work">Вибачте, банкомат тимчасово не працює.</string>
    <string name="hint_not_ready_to_work">Ми працюємо над вирішенням проблеми</string>
    <string name="ran_out_of_money">У банкоматі закінчилися гроші</string>
    <string name="runs_out_of_money">У банкоматі закінчуються гроші</string>
    <string name="hint_wait_for_maintenance_complete">Деякі функції банкомата недоступні. Для повноціного користування, будь ласка, зачекайте на завершення технічного обслуговування</string>
    <string name="account_number_with_colon">Рахунку №:</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="pin_with_colon">PIN: %s</string>
    <string name="amount_in_uah">%.2f грн</string>
    <string name="card_has_expired">Термін дії картки закінчився.</string>
    <string name="hin_contact_bank_branch">Зверніться до відділення банку</string>
    <string name="view_balance">Переглянути баланс</string>
    <string name="withdraw_cash">Зняти готівку</string>
    <string name="money_transfer">Переказ коштів</string>
    <string name="top_up_account">Поповнити рахунок</string>
    <string name="to_continue">Продовжити</string>
    <string name="enter_pin">Введіть ПІН-код</string>
    <string name="enter_new_pin">Введіть новий PIN-код</string>
    <string name="change_pin">Змінити ПІН-код</string>
    <string name="entered_incorrect_pin">Ви ввели невірний PIN-код</string>
    <string name="last_attempt_remains">Залишилась остання спроба!!!</string>
    <string name="complete_work">Завершити роботу</string>
    <string name="go_to_menu">Перейти до головного меню</string>
    <string name="go_back_to_previous_menu">Повернутися до попереднього меню</string>
    <string name="return_to_previous_menu">Перейти до головного меню</string>
    <string name="card_is_blocked">Картка заблокована</string>
    <string name="message_card_is_blocked">Ви тричі ввели невірний ПІН-код, зверніться до найближчого відділення банку</string>
    <string name="an_error_occurred">Виникла помилка</string>
    <string name="error_message_view_balance">Не вдалося отримати Ваш поточний баланс.</string>
    <string name="error_message_withdraw_cash">Не вдалося зарахувати кошти на Ваш рахунок.</string>
    <string name="error_message_top_up_account">Не вдалося зняти кошти з Вашого рахунок.</string>
    <string name="error_message_change_pin">Не вдалося змінити ПІН-код.</string>
    <string name="error_message_an_unexpected_error_occurred">Сталася неочікувана помилка.</string>
    <string name="try_again_or_contact_bank">Будь ласка спробуйте ще раз. Якщо помилка не зникає, зверніться до найближчого відділення банку</string>
    <string name="title_view_balance">Будь ласка спробуйте ще раз. Якщо помилка не зникає, зверніться до найближчого відділення банку</string>
    <string name="including_credit_facilities">З урахуванням кредитних коштів</string>
    <string name="own_funds">Власні кошти</string>
    <string name="available">Доступно</string>
    <string name="credit_limit">Кредитний ліміт</string>
    <string name="enter_amount">Введіть суму та натисніть \"Продовжити\"</string>
    <string name="operation_completed">Операція виконана</string>
    <string name="pin_successfully_changed">Ваш PIN-код успішно змінено на новий</string>
    <string name="hint_take_money">Не забудьте забрати гроші</string>
    <string name="account_successfully_topped_up">Ваш рахунок успішно поповнено</string>
    <string name="not_enough_funds_in_atm">У банкоматі недостатньо коштів для здійснення операції. Максимальна сума: %s</string>
    <string name="account_does_not_have_enough_funds">На Вашому рахунку недостатньо коштів для здійснення операції</string>
</resources>