<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/close_button"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:icon="@drawable/outline_close_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/ShapeAppearance.Material3.MediumComponent" />

    <TextView
        android:id="@+id/message_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:textColor="@color/raisin_black_alpha_38"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/time_is_left_text_view"
        app:layout_constraintEnd_toEndOf="@+id/time_is_left_text_view"
        app:layout_constraintStart_toStartOf="@+id/time_is_left_text_view"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="message"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/time_is_left_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:textColor="@color/raisin_black_alpha_38"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="00:15"
        tools:visibility="visible" />

    <Button
        android:id="@+id/view_balance_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:text="@string/view_balance"
        app:layout_constraintBottom_toTopOf="@+id/withdraw_cash_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close_button"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/withdraw_cash_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:text="@string/withdraw_cash"
        app:layout_constraintBottom_toTopOf="@+id/top_up_account_button"
        app:layout_constraintEnd_toEndOf="@+id/view_balance_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/view_balance_button"
        app:layout_constraintTop_toBottomOf="@+id/view_balance_button" />

    <Button
        android:id="@+id/top_up_account_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/top_up_account"
        app:layout_constraintBottom_toTopOf="@+id/change_pin_button"
        app:layout_constraintEnd_toEndOf="@+id/withdraw_cash_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/withdraw_cash_button"
        app:layout_constraintTop_toBottomOf="@+id/withdraw_cash_button" />

    <Button
        android:id="@+id/change_pin_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/change_pin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/top_up_account_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/top_up_account_button"
        app:layout_constraintTop_toBottomOf="@+id/top_up_account_button" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/hint_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="message_text_view,time_is_left_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>